# Reksoft

./: Dockerfile  README.MD  pyproject.toml
migrations/: 001_initial.sql
resourceapp/: app.py
resourceapp/api/: __init__.py  base_router.py  resource.py  resource_type.py
resourceapp/core/: __init__.py  exceptions.py  router.py  session.py  settings.py
resourceapp/crud/: __init__.py  base_crud.py  resource.py  resource_type.py
resourceapp/db/: __init__.py  base.py  database.py  decoder.py  encoder.py  operators.py
resourceapp/models/: __init__.py  resource_entity.py  resource_type.py
resourceapp/schemas/: __init__.py  base.py  delete_schema.py  resource.py  resource_type.py
